--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,6 +2,7 @@
   background: rgb(233, 233, 233);
   width: 100%;
   height: auto;
+  min-height: 100vh;
   text-align: center;
 }
 .home div button {
@@ -12,6 +13,16 @@
   border: none;
   border-radius: 5px;
 }
+
+#photo__selector {
+  background-color: rgb(200, 200, 200);
+  padding: 10px 0 10px 10px;
+  margin: 10px;
+  color: black;
+  border: none;
+  border-radius: 5px;
+}
+
 .home div select {
   border-radius: 5px;
   border: none;
@@ -25,5 +36,6 @@
 }
 .img__container span img {
   width: 85%;
+  max-height: 600px;
   margin: 20px;
 }
