--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,22 @@
-#root {
-  background: rgb(233, 233, 233);
-  padding: 50px auto;
-  padding-bottom: 100px;
-}
 * {
   margin: 0;
   padding: 0;
+}
+
+#root {
+  background: black;
+  padding: 50px auto;
+  padding-bottom: 100px;
+}
+
+body {
+  font-family: "Nunito", cursive;
+  color: white;
+  text-align: center;
+  background-color: black;
+  margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
